[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bingus Assets/graphics/canyonlayer1.png" type="Texture" id=1]
[ext_resource path="res://Bingus Assets/graphics/canyonlayer2.png" type="Texture" id=2]
[ext_resource path="res://Levels/Canyon.gd" type="Script" id=3]

[node name="Canyon" type="ParallaxBackground"]
layer = -96
script = ExtResource( 3 )

[node name="CanyonLayer2" type="ParallaxLayer" parent="."]
visible = false
modulate = Color( 0.760784, 0.752941, 0.72549, 1 )
motion_scale = Vector2( 1, 0.66 )
motion_mirroring = Vector2( 0, 1440 )

[node name="Sprite" type="Sprite" parent="CanyonLayer2"]
texture = ExtResource( 2 )
centered = false

[node name="CanyonLayer1" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2( 0, 1440 )

[node name="Sprite" type="Sprite" parent="CanyonLayer1"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -490 )

[node name="CanyonLayer2Timer" type="Timer" parent="."]
wait_time = 64.0
one_shot = true
autostart = true

[node name="CanyonLayer1Timer" type="Timer" parent="."]
wait_time = 74.5
one_shot = true
autostart = true

[node name="RemoveCanyon" type="Timer" parent="."]
wait_time = 130.0
one_shot = true
autostart = true

[connection signal="timeout" from="CanyonLayer2Timer" to="." method="_on_CanyonLayer2Timer_timeout"]
[connection signal="timeout" from="CanyonLayer1Timer" to="." method="_on_CanyonLayer1Timer_timeout"]
[connection signal="timeout" from="RemoveCanyon" to="." method="_on_RemoveCanyon_timeout"]
